# Promps

./: .gitmodules  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  TODO.md  package-lock.json  package.json  stats_data.json  tauri.conf.json
.ai-context/: CONVENTIONS.md  DEVELOPMENT_METHODOLOGY.md  ESSENTIAL.md  I18N_RESOURCE_MANAGEMENT.md  PROJECT_STRUCTURE.md  PROMPS_DESIGN_PHILOSOPHY.md  README.md  TAURI_DEVELOPMENT.md  TODO.md
.ai-context/core/: QUICK_REFERENCE.md  SCALE_AND_ARCHITECTURE.md
.ai-context/development/: API_STABILITY.md  CONVENTIONS.md  TESTING_STRATEGY.md
.ai-context/drafts/: TODO_automation.md
.ai-context/insights/: AI_COGNITIVE_AUGMENTATION.md  NECESSITY_DRIVEN_DESIGN.md  PARALLEL_PREDICTION_INSIGHTS.md  SOFTWARE_AS_ORGANISM.md  WHY_REFACTORING_FAILS.md
.ai-context/workflows/: BRANCHING_STRATEGY.md  RELEASE_PROCESS.md
.github/: DISCUSSIONS.md  DISCUSSIONS_SETUP.md  RELEASE_TEMPLATE.md  WELCOME_DISCUSSION_DRAFT.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  カスタム課題テンプレート.md  バグレポート.md  機能リクエスト.md
.github/workflows/: doc-check.yml  feature-branch-test.yml  release.yml  sync-downstream.yml  update-ai-context-shared.yml  version-bump.yml
docs/: INDEX_en.md  INDEX_ja.md  README.md
docs/design/: ARCHITECTURE.md
docs/en/: API_REFERENCE.md  ARCHITECTURE.md  CORE_FEATURES.md  README.md
docs/ja/: API_REFERENCE.md  ARCHITECTURE.md  CORE_FEATURES.md  README.md
icons/: icon.icns
res/: index.html
res/css/: common.css
res/js/: blockly-config.js  i18n.js  main.js  project-manager.js  validation-ui.js
res/tests/: blockly-config.test.js  i18n.test.js  main.test.js  validation-ui.test.js
scripts/: fetch_stats.py  generate_stats_graph.py  pre-release-check.sh
src/: commands.rs  lib.rs  main.rs
src/modules/: mod.rs  validation.rs
(+15 files in other folders)
